fixed border flickering and highlight colors

--- a/styles/_calendar.scss
+++ b/styles/_calendar.scss
@@ -15,7 +15,7 @@
         text-align: right;
     }
 
-    .day:not(.day--excess):hover {
+    .day:not(.day--disabled):hover {
         background-color: #ccc;
         button::after {
             content: "hover";
@@ -33,28 +33,37 @@
     }
 
     .day--today {
-        background-color: #77f;
-        color: blue;
+        color: #00c;
+        button {
+            border-color: #77f;
+        }
         button::after {
             content: "today";
         }
     }
 
-    .day--current:not(.day--excess) {
-        background-color: #7f7;
-        color: #000;
-        outline: 1px solid #0f0;
+    .day--current {
+        color: #070;
+        button {
+            border-color: #7c7;
+        }
         button::after {
             content: "current";
         }
     }
 
-    .day--selected:not(.day--excess) {
-        color: #000;
-        background-color: #f77;
+    .day--selected {
+        button {
+            border-color: #f77;
+        }
         button::after {
             content: "selected";
+            color: #f77;
         }
+    }
+
+    .day--disabled {
+        color: #c77;
     }
 
     button {
@@ -64,6 +73,8 @@
         border: none;
         background-color: transparent;
         text-align: right;
+
+        border: 1px solid transparent;
 
         font-size: inherit;
         color: inherit;
