--- a/styles/main.css
+++ b/styles/main.css
@@ -44,9 +44,9 @@ body {
   .calendar .calendar-week {
     padding: 1em;
     text-align: right; }
-  .calendar .day:not(.day--excess):hover {
+  .calendar .day:not(.day--disabled):hover {
     background-color: #ccc; }
-    .calendar .day:not(.day--excess):hover button::after {
+    .calendar .day:not(.day--disabled):hover button::after {
       content: "hover"; }
   .calendar .weekday,
   .calendar .calendar-week,
@@ -55,21 +55,24 @@ body {
   .calendar .weekend {
     background-color: #eee; }
   .calendar .day--today {
-    background-color: #77f;
-    color: blue; }
+    color: #00c; }
+    .calendar .day--today button {
+      border-color: #77f; }
     .calendar .day--today button::after {
       content: "today"; }
-  .calendar .day--current:not(.day--excess) {
-    background-color: #7f7;
-    color: #000;
-    outline: 1px solid #0f0; }
-    .calendar .day--current:not(.day--excess) button::after {
+  .calendar .day--current {
+    color: #070; }
+    .calendar .day--current button {
+      border-color: #7c7; }
+    .calendar .day--current button::after {
       content: "current"; }
-  .calendar .day--selected:not(.day--excess) {
-    color: #000;
-    background-color: #f77; }
-    .calendar .day--selected:not(.day--excess) button::after {
-      content: "selected"; }
+  .calendar .day--selected button {
+    border-color: #f77; }
+  .calendar .day--selected button::after {
+    content: "selected";
+    color: #f77; }
+  .calendar .day--disabled {
+    color: #c77; }
   .calendar button {
     display: inline-block;
     width: 100%;
@@ -77,6 +80,7 @@ body {
     border: none;
     background-color: transparent;
     text-align: right;
+    border: 1px solid transparent;
     font-size: inherit;
     color: inherit;
     position: relative; }
